<resources>
    <string name="app_name">Заметки</string>

    <!-- Общие действия -->
    <string name="action_search_toast">Возможно тут будет поиск...</string>
    <string name="data_removed">Заметка удалена</string>
    <string name="opening">Открываем...</string>
    <string name="action_context_edit">Изменить</string>
    <string name="action_edit">Изменить</string>

    <!-- Фрагмент с настройками -->
    <string name="settings_description">Тут скоро будут настройки</string>
    <string name="settings_toolbar_title">Настройки</string>

    <!-- Фрагмент с выбранной заметкой -->
    <string name="note_not_selected">Заметка не выбрана</string>
    <string name="content">Содержание заметки</string>
    <string name="note_info_toolbar_title">Информация о заметке</string>

    <!-- Фрагмент со списком заметок -->
    <string name="notes_are_missing">Нет заметок.</string>
    <string name="fab_description">Новая заметка</string>
    <string name="toast_editing">Редактируем...</string>

    <!-- Фрагмент "О программе" -->
    <string name="about">Тут будет информация о программе</string>
    <string name="about_toolbar_title">О программе</string>

    <!-- Меню Navigation Drawer -->
    <string name="drawer_item_all_notes">Все заметки</string>
    <string name="drawer_item_other">Прочее</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_about">О программе</string>
    <string name="drawer_item_exit">Выход</string>

    <string name="navigation_drower_open">Открыть</string>
    <string name="navigation_drower_close">Закрыть</string>

    <!-- Меню выбора опций -->
    <string name="action_search">Поиск</string>
    <string name="action_select">Выбрать</string>
    <string name="action_information">Информация</string>
    <string name="action_remove">Удалить</string>

    <!-- Контекстное меню -->
    <string name="action_context_open">Открыть</string>
    <string name="action_context_remove">Удалить</string>

    <!-- Информация о пользователе-->
    <string name="users_avatar">Аватар пользователя</string>
    <string name="home_address">Groove Street in Ganton, Los Santos</string>
    <string name="username">Carl Johnson</string>

    <!-- Диалог при выходе -->
    <string name="exit_dialog_title">Выход</string>
    <string name="exit_dialog_message">Вы точно хотите выйти?</string>
    <string name="exit_dialog_positive_button">Конечно да!</string>
    <string name="exit_dialog_nevative_button">Нет</string>
    <string name="exit_dialog_neutral_button">Могу остаться</string>

    <string name="exit_dialog_toast_exit">До скорых встреч!</string>
    <string name="exit_dialog_toast_stay">Правильный выбор...</string>

    <!-- Snackbar при удалении -->
    <string name="snackbar_remove_description">Заметка удалена.</string>

    <!-- Notification при добавлении заметки (клике на FloatingButton) -->
    <string name="notification_title">Поздравляем!</string>
    <string name="notification_description">Тут нельзя добавлять заметки!</string>

    <!-- AdditionalActivity -->
    <string name="open_additional_activity">Открыть вторую Activity</string>
    <string name="additional_activity">Дополнительная Activity</string>
    <string name="bottom_sheet_dialog_fragment">Bottom Sheet Dialog Fragment</string>
    <string name="bottom_sheet_dialog_button_ok">Ok!</string>
    <string name="bottom_sheet_dialog_button_yes">Yes!</string>
    <string name="toast_press_ok">Нажата ОК</string>
    <string name="toast_press_yes">Нажата YES</string>
    <!-- Прочие новые ресурсы -->

</resources>