<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_drawer_all_notes"
        android:title="@string/drawer_item_all_notes" />

    <item
        android:id="@+id/drawer_group_other"
        android:title="@string/drawer_item_other">
        <menu>
            <item
                android:id="@+id/action_drawer_open_settings"
                android:title="@string/drawer_item_settings" />
            <item
                android:id="@+id/action_drawer_about"
                android:title="@string/drawer_item_about" />
        </menu>
    </item>
    <group android:id="@+id/drawer_group_exit">
        <item
            android:id="@+id/action_drawer_exit"
            android:title="@string/drawer_item_exit" />
    </group>
</menu>